--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -402,8 +402,8 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>John Michael Goco</h1>
+        <p class="description">I am an innovator, and build projects for fun♥♥♥</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
@@ -427,9 +427,9 @@
 
         <!-- Centered Links -->
         <div class="links">
-            <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
-            <a href="https://github.com/yhnalx"><i class="fab fa-github"></i>GitHub</a>
-            <a href="https://www.facebook.com/yhnalx"><i class="fab fa-facebook"></i>Facebook</a>
+            <!-- <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>  -->
+            <a href="https://github.com/John-Michael-Goco"><i class="fab fa-github"></i>GitHub</a>
+            <a href="https://m.facebook.com/johnmichael.goco"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
 
         <div class="visitor-count">
