--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -408,12 +408,12 @@
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>Holy Cross College Affiliations:</h3>
+           <h2>Education</h2>
             <ul>
-                <li>HOLY CROSS COLLEGE Best Student of 2022</li>
-                <li>HOLY CROSS COLLEGE Best Student of 2023</li>
-                <li>HOLY CROSS COLLEGE Best Student of 2024</li>
-                <li>HOLY CROSS COLLEGE Aspiring Best Student of 2025</li>
+                <li>Elementary: Sta Ana Elementary School --------------------------------------------- 2010 - 2016</li>
+                <li>Junior High School: Telesforo Natividad Alfonso High School ------------------- 2016 - 2020</li>
+                <li>Senior High School: Holy Cross College ---------------------------------------------- 2020 - 2022</li>
+                <li>College: Holy Cross College ---------------------------------------------------------- 2022 - Present</li>
             </ul>
         </div>
 
